--- a/requirements.txt
+++ b/requirements.txt
@@ -1,285 +1,1 @@
-aiohttp==3.9.4
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.6.0
-anyio==4.3.0
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-async-timeout==4.0.3
-attrs==22.1.0
-autopep8==1.7.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.7.0
-cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.15.1
-charset-normalizer==3.3.2
-click==8.1.7
-comm==0.2.1
-contourpy==1.0.5
-cycler==0.11.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.2.0
-executing==1.0.0
-fastjsonschema==2.16.1
-Flask==3.0.3
-fonttools==4.37.4
-frozenlist==1.4.1
-gitdb==4.0.11
-GitPython==3.1.43
-gTTS==2.5.1
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-imageio==2.25.1
-inflection==0.5.1
-ipykernel==6.15.2
-ipympl==0.9.3
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.2
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-jsonschema==4.16.0
-jupyter-core==4.11.1
-jupyter_client==7.3.5
-jupyterlab-pygments==0.2.2
-jupyterlab_widgets==3.0.10
-kiwisolver==1.4.4
-lxml==4.9.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-matplotlib==3.6.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==2.0.4
-mpmath==1.3.0
-multidict==6.0.5
-nbclient==0.6.8
-nbconvert==7.0.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numpy==1.23.3
-openai==0.28.0
-openapi==1.1.0
-openpyxl==3.1.2
-packaging==21.3
-pandas==2.1.4
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.31
-protobuf==4.25.3
-psutil==5.9.2
-ptyprocess==0.7.0
-PuLP==2.8.0
-pure-eval==0.2.2
-pyarrow==15.0.2
-PyAudio==0.2.13
-pycodestyle==2.9.1
-pycparser==2.21
-pydantic==2.7.0
-pydantic_core==2.18.1
-pydeck==0.8.1b0
-pygame==2.1.2
-Pygments==2.13.0
-pyobjc==10.2
-pyobjc-core==10.2
-pyobjc-framework-Accessibility==10.2
-pyobjc-framework-Accounts==10.2
-pyobjc-framework-AddressBook==10.2
-pyobjc-framework-AdServices==10.2
-pyobjc-framework-AdSupport==10.2
-pyobjc-framework-AppleScriptKit==10.2
-pyobjc-framework-AppleScriptObjC==10.2
-pyobjc-framework-ApplicationServices==10.2
-pyobjc-framework-AppTrackingTransparency==10.2
-pyobjc-framework-AudioVideoBridging==10.2
-pyobjc-framework-AuthenticationServices==10.2
-pyobjc-framework-AutomaticAssessmentConfiguration==10.2
-pyobjc-framework-Automator==10.2
-pyobjc-framework-AVFoundation==10.2
-pyobjc-framework-AVKit==10.2
-pyobjc-framework-AVRouting==10.2
-pyobjc-framework-BackgroundAssets==10.2
-pyobjc-framework-BusinessChat==10.2
-pyobjc-framework-CalendarStore==10.2
-pyobjc-framework-CallKit==10.2
-pyobjc-framework-CFNetwork==10.2
-pyobjc-framework-ClassKit==10.2
-pyobjc-framework-CloudKit==10.2
-pyobjc-framework-Cocoa==10.2
-pyobjc-framework-Collaboration==10.2
-pyobjc-framework-ColorSync==10.2
-pyobjc-framework-Contacts==10.2
-pyobjc-framework-ContactsUI==10.2
-pyobjc-framework-CoreAudio==10.2
-pyobjc-framework-CoreAudioKit==10.2
-pyobjc-framework-CoreBluetooth==10.2
-pyobjc-framework-CoreData==10.2
-pyobjc-framework-CoreHaptics==10.2
-pyobjc-framework-CoreLocation==10.2
-pyobjc-framework-CoreMedia==10.2
-pyobjc-framework-CoreMediaIO==10.2
-pyobjc-framework-CoreMIDI==10.2
-pyobjc-framework-CoreML==10.2
-pyobjc-framework-CoreMotion==10.2
-pyobjc-framework-CoreServices==10.2
-pyobjc-framework-CoreSpotlight==10.2
-pyobjc-framework-CoreText==10.2
-pyobjc-framework-CoreWLAN==10.2
-pyobjc-framework-CryptoTokenKit==10.2
-pyobjc-framework-DataDetection==10.2
-pyobjc-framework-DeviceCheck==10.2
-pyobjc-framework-DictionaryServices==10.2
-pyobjc-framework-DiscRecording==10.2
-pyobjc-framework-DiscRecordingUI==10.2
-pyobjc-framework-DiskArbitration==10.2
-pyobjc-framework-DVDPlayback==10.2
-pyobjc-framework-EventKit==10.2
-pyobjc-framework-ExceptionHandling==10.2
-pyobjc-framework-ExecutionPolicy==10.2
-pyobjc-framework-ExtensionKit==10.2
-pyobjc-framework-ExternalAccessory==10.2
-pyobjc-framework-FileProvider==10.2
-pyobjc-framework-FileProviderUI==10.2
-pyobjc-framework-FinderSync==10.2
-pyobjc-framework-FSEvents==10.2
-pyobjc-framework-GameCenter==10.2
-pyobjc-framework-GameController==10.2
-pyobjc-framework-GameKit==10.2
-pyobjc-framework-GameplayKit==10.2
-pyobjc-framework-HealthKit==10.2
-pyobjc-framework-ImageCaptureCore==10.2
-pyobjc-framework-InputMethodKit==10.2
-pyobjc-framework-InstallerPlugins==10.2
-pyobjc-framework-InstantMessage==10.2
-pyobjc-framework-Intents==10.2
-pyobjc-framework-IntentsUI==10.2
-pyobjc-framework-IOBluetooth==10.2
-pyobjc-framework-IOBluetoothUI==10.2
-pyobjc-framework-IOSurface==10.2
-pyobjc-framework-iTunesLibrary==10.2
-pyobjc-framework-KernelManagement==10.2
-pyobjc-framework-LatentSemanticMapping==10.2
-pyobjc-framework-LaunchServices==10.2
-pyobjc-framework-libdispatch==10.2
-pyobjc-framework-libxpc==10.2
-pyobjc-framework-LinkPresentation==10.2
-pyobjc-framework-LocalAuthentication==10.2
-pyobjc-framework-LocalAuthenticationEmbeddedUI==10.2
-pyobjc-framework-MailKit==10.2
-pyobjc-framework-MapKit==10.2
-pyobjc-framework-MediaAccessibility==10.2
-pyobjc-framework-MediaLibrary==10.2
-pyobjc-framework-MediaPlayer==10.2
-pyobjc-framework-MediaToolbox==10.2
-pyobjc-framework-Metal==10.2
-pyobjc-framework-MetalFX==10.2
-pyobjc-framework-MetalKit==10.2
-pyobjc-framework-MetalPerformanceShaders==10.2
-pyobjc-framework-MetalPerformanceShadersGraph==10.2
-pyobjc-framework-MetricKit==10.2
-pyobjc-framework-MLCompute==10.2
-pyobjc-framework-ModelIO==10.2
-pyobjc-framework-MultipeerConnectivity==10.2
-pyobjc-framework-NaturalLanguage==10.2
-pyobjc-framework-NetFS==10.2
-pyobjc-framework-Network==10.2
-pyobjc-framework-NetworkExtension==10.2
-pyobjc-framework-NotificationCenter==10.2
-pyobjc-framework-OpenDirectory==10.2
-pyobjc-framework-OSAKit==10.2
-pyobjc-framework-OSLog==10.2
-pyobjc-framework-PassKit==10.2
-pyobjc-framework-PencilKit==10.2
-pyobjc-framework-PHASE==10.2
-pyobjc-framework-Photos==10.2
-pyobjc-framework-PhotosUI==10.2
-pyobjc-framework-PreferencePanes==10.2
-pyobjc-framework-PushKit==10.2
-pyobjc-framework-Quartz==10.2
-pyobjc-framework-QuickLookThumbnailing==10.2
-pyobjc-framework-ReplayKit==10.2
-pyobjc-framework-SafariServices==10.2
-pyobjc-framework-SafetyKit==10.2
-pyobjc-framework-SceneKit==10.2
-pyobjc-framework-ScreenCaptureKit==10.2
-pyobjc-framework-ScreenSaver==10.2
-pyobjc-framework-ScreenTime==10.2
-pyobjc-framework-ScriptingBridge==10.2
-pyobjc-framework-SearchKit==10.2
-pyobjc-framework-Security==10.2
-pyobjc-framework-SecurityFoundation==10.2
-pyobjc-framework-SecurityInterface==10.2
-pyobjc-framework-ServiceManagement==10.2
-pyobjc-framework-SharedWithYou==10.2
-pyobjc-framework-SharedWithYouCore==10.2
-pyobjc-framework-ShazamKit==10.2
-pyobjc-framework-Social==10.2
-pyobjc-framework-SoundAnalysis==10.2
-pyobjc-framework-Speech==10.2
-pyobjc-framework-SpriteKit==10.2
-pyobjc-framework-StoreKit==10.2
-pyobjc-framework-SyncServices==10.2
-pyobjc-framework-SystemConfiguration==10.2
-pyobjc-framework-SystemExtensions==10.2
-pyobjc-framework-ThreadNetwork==10.2
-pyobjc-framework-UniformTypeIdentifiers==10.2
-pyobjc-framework-UserNotifications==10.2
-pyobjc-framework-UserNotificationsUI==10.2
-pyobjc-framework-VideoSubscriberAccount==10.2
-pyobjc-framework-VideoToolbox==10.2
-pyobjc-framework-Virtualization==10.2
-pyobjc-framework-Vision==10.2
-pyobjc-framework-WebKit==10.2
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pyttsx3==2.90
-pytz==2023.3.post1
-pyzmq==23.2.1
-requests==2.31.0
-rich==13.7.1
-scipy==1.11.1
-Send2Trash==1.8.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.3.2.post1
-stack-data==0.5.0
-streamlit==1.33.0
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-termcolor==1.1.0
-terminado==0.15.0
-tinycss2==1.1.1
-toml==0.10.2
-toolz==0.12.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.3.0
-typing_extensions==4.11.0
-tzdata==2023.4
-urllib3==2.2.1
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==3.0.2
-widgetsnbextension==4.0.10
-yarl==1.9.4
+streamlit
